# SJTUME24-gradproject

./: README.md
detectCircles/: CMakeLists.txt  calc_tube_grasp_pose.cpp  caltab0430.descr  detect_circles.cpp  function.h  main.cpp  simpinput.py
foundationpose/: pose_est.sh  realtime_pose_est.py  run_demo.py  zedreader.py
foundationpose/bundlesdf/mycuda/common.egg-info/: SOURCES.txt
foundationpose/debug/: init_center.ply  scene_complete.ply  scene_raw.ply
foundationpose/demo_data/black_box/: cam_K.txt  depth_test.py
foundationpose/demo_data/black_box/mesh/: textured_mesh.mtl
foundationpose/demo_data/grasp_tube0/mesh/: textured_tube.obj.mtl
foundationpose/docker/: dockerfile  run_container1.sh
nanosam/examples/: basic_usage.py  click_segment_track_from_zed.py  segment_from_owl.py
