cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(HALCONROOT "/home/xcdai/MVTec/HALCON-23.11-Progress")
project(DetectCircles)
include_directories(${HALCONROOT}/include ${HALCONROOT}/include/halconcpp)
link_directories(${HALCONROOT}/lib/x64-linux)
add_executable(DetectCircles detect_circles.cpp calc_tube_grasp_pose.cpp main.cpp)
target_link_libraries(DetectCircles halconcpp halcon pthread)